집 가는 날짜 변경

--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -13,9 +13,9 @@
         android:id="@+id/change_date_btn"
         app:showAsAction="ifRoom" />
 
-    <item
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="Settings"
-        android:id="@+id/settings_btn"
-        app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:icon="@drawable/ic_baseline_settings_24"-->
+<!--        android:title="Settings"-->
+<!--        android:id="@+id/settings_btn"-->
+<!--        app:showAsAction="ifRoom" />-->
 </menu>
